--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="Modern-Web Design" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Mailar" />
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
@@ -42,7 +42,7 @@
           <span>designer</span> ...
         </h1>
         <div class="buttons">
-          <a href="#" class="material-bubble" rel="noreferrer" target="_blank"
+          <a href="cv.html" class="material-bubble" rel="noreferrer" 
             ><i class="fas fa-download"></i> Resume</a
           >
           <br>
@@ -53,13 +53,15 @@
           <br />
         </div>
         <div class="about" id="a">
-          <h2><div>Ab</div>out <span> Me</span> </h2>
-          <div class="text">
-            <p>
-              I am currently studying to be a software developer however when I
-              graduate I will go forward to full-stack development and cyber
-              security. I am a productive and professional front-end developer.
-            </p>
+          <div class="margin">
+            <h2><div>Ab</div>out <span> Me</span> </h2>
+            <div class="text">
+              <p>
+                Hello there, I am a Front-end developer who is currently studying software development however, when I
+                graduate, I will go study full-stack development and cyber security.
+                I am a productive and professional front-end developer.
+              </p>
+            </div>
           </div>
         </div>
         <script src="index.js"></script>
