Clean up the code

--- a/cv.html
+++ b/cv.html
@@ -1,9 +1,3 @@
-<!--
-  Thank you for using this design :)
-
-  This is my favourite black and white website design of all what I have made.
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
     <link rel="stylesheet" href="index.css" />
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
   </head>
   <body>
     <header>
@@ -25,7 +16,6 @@
             <h1>Mailar.</h1>
           </a>
           <ul>
-            <!-- <li><a href="#">Home</a></li> -->
             <li><a href="index.html">Return</a></li>
           </ul>
         </div>
