--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
-<!--
-  Thank you for using this design :)
-
-  This is my favourite black and white website design of all what I have made.
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Modern-Web Design" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="description" content="Personal Portfolio Website" />
+    <meta name="keywords" content="Mailar, Web Developer, Portfolio" />
     <meta name="author" content="Mailar" />
-    <title>Home</title>
+    <title>Mailar</title>
     <link rel="stylesheet" href="index.css" />
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
   </head>
   <body>
+    <script src="index.js"></script>
     <header>
       <nav>
         <div class="spacing">
@@ -28,7 +20,6 @@
             <h1>Mailar.</h1>
           </a>
           <ul>
-            <!-- <li><a href="#">Home</a></li> -->
             <li><a href="#a">About</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">Projects</a></li>
@@ -36,35 +27,30 @@
           </ul>
         </div>
       </nav>
+
       <div class="container">
         <h1>
-          Hey! I am <span>Front-end</span> <span>developer</span> and
-          <span>designer</span> ...
+          Hey! I am <span>Front-end</span> <span>developer</span> 
+          and <span>designer</span> ...
         </h1>
         <div class="buttons">
-          <a href="cv.html" class="material-bubble" rel="noreferrer" 
-            ><i class="fas fa-download"></i> Resume</a
-          >
-          <br>
-          <a href="#" class="material-bubble" rel="noreferrer"
-            ><i class="fas fa-code-branch"></i> Projects</a
-          >
-          <br />
-          <br />
+          <a href="cv.html" class="material-bubble" rel="noreferrer">
+            <i class="fas fa-download"></i> Resume</a>
+          <a href="#" class="material-bubble" rel="noreferrer">
+            <i class="fas fa-code-branch"></i> Projects</a>
         </div>
         <div class="about" id="a">
           <div class="margin">
-            <h2><div>Ab</div>out <span> Me</span> </h2>
-            <div class="text">
-              <p>
-                Hello there, I am a Front-end developer who is currently studying software development however, when I
-                graduate, I will go study full-stack development and cyber security.
-                I am a productive and professional front-end developer.
-              </p>
-            </div>
+            <h2>
+              <div>Ab</div>out <span> Me</span> 
+            </h2>
+            <p>
+              Hello there, I am a Front-end developer who is currently studying software development however, when I
+              graduate, I will go study full-stack development and cyber security.
+              I am a productive and professional front-end developer.
+            </p>
           </div>
         </div>
-        <script src="index.js"></script>
       </div>
     </header>
 
@@ -73,7 +59,6 @@
         <div class="skills">
           
         </div>
-        <script src="index.js"></script>
       </div>
     </section>
 
