Import Poppins, Font-family

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <body>
     <script src="index.js"></script>
     <header>
-      <nav>
-        <div class="spacing">
+      <nav class="spacing">
           <a href="#home">
             <h1>Mailar.</h1>
           </a>
@@ -25,7 +24,6 @@
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-        </div>
       </nav>
 
       <div class="container">
