--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
   </head>
   <body>
-    <script src="index.js"></script>
     <header>
-      <nav class="spacing">
-          <a href="#home">
-            <h1>Mailar.</h1>
-          </a>
-          <ul>
-            <li><a href="#a">About</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
+      <nav>
+        <a href="#01" id="01">
+          <h1>Mailar.</h1>
+        </a>
+        <ul>
+          <li><a href="#02">About</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </nav>
-
       <div class="container">
         <h1>
           Hey! I am <span>Front-end</span> <span>developer</span> 
           and <span>designer</span> ...
         </h1>
-        <div class="buttons">
+        <div class="btn-container">
           <a href="cv.html" class="material-bubble" rel="noreferrer">
-            <i class="fas fa-download"></i>Resume</a>
+            <i class="fas fa-download"></i>Resume
+          </a>
           <a href="#" class="material-bubble" rel="noreferrer">
-            <i class="fas fa-code-branch"></i>Projects</a>
-        </div>
-        <div class="about" id="a">
+            <i class="fas fa-code-branch"></i>Projects
+          </a>
+       </div>
+       <div class="about" id="02">
           <div class="margin">
             <h2>
               <div>Ab</div>out <span> Me</span> 
@@ -51,6 +51,7 @@
         </div>
       </div>
     </header>
+    <script src="index.js"></script>
 
     <section>
       <div class="container">
@@ -62,7 +63,6 @@
 
     <footer>
       <div class="boot">
-        <!-- <h1>Design by Mailar</h1> -->
       </div>
     </footer>
   </body>
