Add languages and frameworks

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
        <div class="about" id="02">
           <div class="margin">
             <h2>
-              <div>Ab</div>out <span> Me</span> 
+              <div>Ab</div>out <span> Me</span>  
+                <i class="fab fa-js"></i>    
+                <i class="fab fa-html5"></i>
+                <i class="fab fa-css3-alt"></i>
+                <i class="fab fa-sass"></i>
+                <test> </test>
+                <i class="fab fa-node-js"></i>   
+                <i class="fab fa-react"></i> 
             </h2>
             <p>
               Hello there, I am a Front-end developer who is currently studying software development however, when I
