--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <title>Mailar</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   </head>
   <body>
+    <div class="mobile">
+      <ion-icon name="reorder-three-outline"></ion-icon>
+    </div>
+
     <header>
       <nav>
         <a href="#01" id="01">
@@ -45,7 +50,6 @@
                 <i class="fab fa-html5"></i>
                 <i class="fab fa-css3-alt"></i>
                 <i class="fab fa-sass"></i>
-                <test> </test>
                 <i class="fab fa-node-js"></i>   
                 <i class="fab fa-react"></i> 
             </h2>
