--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <meta name="author" content="Mailar" />
     <title>Mailar</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
   </head>
   <body>
-    <div class="mobile">
-      <ion-icon name="reorder-three-outline"></ion-icon>
-    </div>
-
     <header>
       <nav>
         <a href="#01" id="01">
@@ -28,11 +30,14 @@
           <li><a href="#">Projects</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
+        <div class="mobile">
+          <ion-icon name="reorder-three-outline"></ion-icon>
+        </div>
       </nav>
       <div class="container">
         <h1>
-          Hey! I am <span>Front-end</span> <span>developer</span> 
-          and <span>designer</span> ...
+          Hey! I am <span>Front-end</span> <span>developer</span> and
+          <span>designer</span> ...
         </h1>
         <div class="btn-container">
           <a href="cv.html" class="material-bubble" rel="noreferrer">
@@ -41,22 +46,24 @@
           <a href="#" class="material-bubble" rel="noreferrer">
             <i class="fas fa-code-branch"></i>Projects
           </a>
-       </div>
-       <div class="about" id="02">
+        </div>
+        <div class="about" id="02">
           <div class="margin">
             <h2>
-              <div>Ab</div>out <span> Me</span>  
-                <i class="fab fa-js"></i>    
-                <i class="fab fa-html5"></i>
-                <i class="fab fa-css3-alt"></i>
-                <i class="fab fa-sass"></i>
-                <i class="fab fa-node-js"></i>   
-                <i class="fab fa-react"></i> 
+              <div>Ab</div>
+              out <span> Me</span>
+              <i class="fab fa-js"></i>
+              <i class="fab fa-html5"></i>
+              <i class="fab fa-css3-alt"></i>
+              <i class="fab fa-sass"></i>
+              <i class="fab fa-node-js"></i>
+              <i class="fab fa-react"></i>
             </h2>
             <p>
-              Hello there, I am a Front-end developer who is currently studying software development however, when I
-              graduate, I will go study full-stack development and cyber security.
-              I am a productive and professional front-end developer.
+              Hello there, I am a Front-end developer who is currently studying
+              software development however, when I graduate, I will go study
+              full-stack development and cyber security. I am a productive and
+              professional front-end developer.
             </p>
           </div>
         </div>
@@ -66,15 +73,12 @@
 
     <section>
       <div class="container">
-        <div class="skills">
-          
-        </div>
+        <div class="skills"></div>
       </div>
     </section>
 
     <footer>
-      <div class="boot">
-      </div>
+      <div class="boot"></div>
     </footer>
   </body>
 </html>
