--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         </a>
         <ul>
           <li><a href="#02">About</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Projects</a></li>
+          <li><a href="#03">Projects</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
         <div class="mobile">
@@ -39,14 +38,16 @@
           Hey! I am <span>Front-end</span> <span>developer</span> and
           <span>designer</span> ...
         </h1>
+
         <div class="btn-container">
           <a href="cv.html" class="material-bubble" rel="noreferrer">
             <i class="fas fa-download"></i>Resume
           </a>
-          <a href="#" class="material-bubble" rel="noreferrer">
+          <a href="#03" class="material-bubble" rel="noreferrer">
             <i class="fas fa-code-branch"></i>Projects
           </a>
         </div>
+
         <div class="about" id="02">
           <div class="margin">
             <h2>
@@ -72,8 +73,50 @@
     <script src="index.js"></script>
 
     <section>
-      <div class="container">
-        <div class="skills"></div>
+      <div class="container" id="03">
+        <h1>Recent Work</h1>
+
+
+        <div class="card">
+          <div class="wrapper">
+            <div class="content">
+              <h1>Portfolio</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+            </div>
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="wrapper">
+            <div class="content">
+              <h1>To Do List</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+            </div>
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="wrapper">
+            <div class="content">
+              <h1>Project 3</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+            </div>
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="wrapper">
+            <div class="content">
+              <h1>Project 4</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+            </div>
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
+          </div>
+        </div>
+
       </div>
     </section>
 
