--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
           <div class="wrapper">
             <div class="content">
               <h1>Portfolio</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+              <div class="btn-container">
+                <a href="#">Source</a>
+                <a href="#">Preview</a>
+              </div>
             </div>
             <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
           </div>
@@ -91,7 +95,11 @@
           <div class="wrapper">
             <div class="content">
               <h1>To Do List</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+              <div class="btn-container">
+                <a href="#">Source</a>
+                <a href="#">Preview</a>
+              </div>
             </div>
             <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
           </div>
@@ -100,18 +108,12 @@
         <div class="card">
           <div class="wrapper">
             <div class="content">
-              <h1>Project 3</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
-            </div>
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="wrapper">
-            <div class="content">
-              <h1>Project 4</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+              <h1>2Auth</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
+              <div class="btn-container">
+                <a href="#">Source</a>
+                <a href="#">Preview</a>
+              </div>
             </div>
             <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
           </div>
