--- a/index.html
+++ b/index.html
@@ -9,121 +9,137 @@
     <meta name="author" content="Mailar" />
     <title>Mailar</title>
     <link rel="stylesheet" href="index.css" />
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    />
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="#01" id="01">
-          <h1>Mailar.</h1>
-        </a>
-        <ul>
-          <li><a href="#02">About</a></li>
-          <li><a href="#03">Projects</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="mobile">
-          <ion-icon name="reorder-three-outline"></ion-icon>
-        </div>
-      </nav>
-      <div class="container">
-        <h1>
-          Hey! I am <span>Front-end</span> <span>developer</span> and
-          <span>designer</span> ...
-        </h1>
 
-        <div class="btn-container">
-          <a href="cv.html" class="material-bubble" rel="noreferrer">
-            <i class="fas fa-download"></i>Resume
-          </a>
-          <a href="#03" class="material-bubble" rel="noreferrer">
-            <i class="fas fa-code-branch"></i>Projects
-          </a>
-        </div>
-
-        <div class="about" id="02">
-          <div class="margin">
-            <h2>
-              <div>Ab</div>
-              out <span> Me</span>
-              <i class="fab fa-js"></i>
-              <i class="fab fa-html5"></i>
-              <i class="fab fa-css3-alt"></i>
-              <i class="fab fa-sass"></i>
-              <i class="fab fa-node-js"></i>
-              <i class="fab fa-react"></i>
-            </h2>
-            <p>
-              Hello there, I am a Front-end developer who is currently studying
-              software development however, when I graduate, I will go study
-              full-stack development and cyber security. I am a productive and
-              professional front-end developer.
-            </p>
-          </div>
-        </div>
+    <nav>
+      <a href="#01" id="01">
+        <h1>Mailar.</h1>
+      </a>
+      <ul>
+        <li><a href="#02">About</a></li>
+        <li><a href="#03">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <div class="mobile">
+        <ion-icon name="reorder-three-outline"></ion-icon>
       </div>
-    </header>
-    <script src="index.js"></script>
+    </nav>
+    
+    <div class="container">
 
-    <section>
-      <div class="container" id="03">
-        <h1>Recent Work</h1>
+      <header>
+        <div class="wrapper">
+          <h1>
+            Hey! I am <span>Front-end</span> <span>developer</span> and
+            <span>designer</span> ...
+          </h1>
 
+          <div class="btn-container">
+            <a href="cv.html" class="material-bubble" rel="noreferrer">
+              <i class="fas fa-download"></i>Resume
+            </a>
+            <a href="#03" class="material-bubble" rel="noreferrer">
+              <i class="fas fa-code-branch"></i>Projects
+            </a>
+          </div>
 
-        <div class="card">
-          <div class="wrapper">
-            <div class="content">
-              <h1>Portfolio</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
-              <div class="btn-container">
-                <a href="#">Source</a>
-                <a href="#">Preview</a>
-              </div>
+          <div class="about" id="02">
+            <div class="margin">
+              <h2>
+                <div>Ab</div>
+                out <span> Me</span>
+                <i class="fab fa-js"></i>
+                <i class="fab fa-html5"></i>
+                <i class="fab fa-css3-alt"></i>
+                <i class="fab fa-sass"></i>
+                <i class="fab fa-node-js"></i>
+                <i class="fab fa-react"></i>
+              </h2>
+              <p>
+                Hello there, I am a Front-end developer who is currently
+                studying software development however, when I graduate, I will
+                go study full-stack development and cyber security. I am a
+                productive and professional front-end developer.
+              </p>
             </div>
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
           </div>
         </div>
+      </header>
 
-        <div class="card">
-          <div class="wrapper">
-            <div class="content">
-              <h1>To Do List</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
-              <div class="btn-container">
-                <a href="#">Source</a>
-                <a href="#">Preview</a>
+      <script src="index.js"></script>
+
+      <section>
+        <div class="projects" id="03">
+          <h1>Recent <span>Work</span></h1>
+
+          <div class="card">
+            <div class="wrapper">
+              <div class="content">
+                <h1>Portfolio</h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptate amet sunt, commodi sapiente distinctio odit est
+                  nihil recusandae quaerat delectus.
+                </p>
+                <div class="btn-container">
+                  <a href="#">Source</a>
+                  <a href="#">Preview</a>
+                </div>
               </div>
+              <img
+                src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1"
+                alt="test"
+              />
             </div>
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
+          </div>
+
+          <div class="card">
+            <div class="wrapper">
+              <div class="content">
+                <h1>To Do List</h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptate amet sunt, commodi sapiente distinctio odit est
+                  nihil recusandae quaerat delectus.
+                </p>
+                <div class="btn-container">
+                  <a href="#">Source</a>
+                  <a href="#">Preview</a>
+                </div>
+              </div>
+              <img
+                src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1"
+                alt="test"
+              />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="wrapper">
+              <div class="content">
+                <h1>2Auth</h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptate amet sunt, commodi sapiente distinctio odit est
+                  nihil recusandae quaerat delectus.
+                </p>
+                <div class="btn-container">
+                  <a href="#">Source</a>
+                  <a href="#">Preview</a>
+                </div>
+              </div>
+              <img
+                src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1"
+                alt="test"
+              />
+            </div>
           </div>
         </div>
+      </section>
 
-        <div class="card">
-          <div class="wrapper">
-            <div class="content">
-              <h1>2Auth</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate amet sunt, commodi sapiente distinctio odit est nihil recusandae quaerat delectus.</p>
-              <div class="btn-container">
-                <a href="#">Source</a>
-                <a href="#">Preview</a>
-              </div>
-            </div>
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1" alt="test">
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <footer>
-      <div class="boot"></div>
-    </footer>
+    </div>
   </body>
 </html>
