Create navbar and clean up the code

--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
     <meta name="keywords" content="Mailar, Web Developer, Portfolio" />
     <meta name="author" content="Mailar" />
     <title>Mailar</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   </head>
   <body>
 
     <nav>
-      <a href="#01" id="01">
-        <h1>Mailar.</h1>
-      </a>
-      <ul>
-        <li><a href="#02">About</a></li>
-        <li><a href="#03">Projects</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <div class="mobile">
-        <ion-icon name="reorder-three-outline"></ion-icon>
+      <div class="container">
+        <a href="#" id="01">
+          <h1>Mailar.</h1>
+        </a>
+        <ul>
+          <li><a href="#02">About</a></li>
+          <li><a href="#03">Projects</a></li>
+          <li><a href="#04">Contact</a></li>
+        </ul>
+      <img src="assets/svg/menu.svg" alt="menu" width="50">
       </div>
     </nav>
     
@@ -69,7 +68,7 @@
         </div>
       </header>
 
-      <script src="index.js"></script>
+      <script type="module" src="assets/js/index.js"></script>
 
       <section>
         <div class="projects" id="03">
@@ -89,10 +88,7 @@
                   <a href="#">Preview</a>
                 </div>
               </div>
-              <img
-                src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1"
-                alt="test"
-              />
+              <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
             </div>
           </div>
 
@@ -110,10 +106,7 @@
                   <a href="#">Preview</a>
                 </div>
               </div>
-              <img
-                src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1"
-                alt="test"
-              />
+              <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
             </div>
           </div>
 
@@ -131,10 +124,7 @@
                   <a href="#">Preview</a>
                 </div>
               </div>
-              <img
-                src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-FI8LE3KC1H8%2FWDvw2uR0rKI%2FAAAAAAAAAMw%2FYDI8HnCXIB0kAED48pTMrjJh3sSZksTbgCLcB%2Fs1600%2FProject%252BManagement%252B-%252Bfreewallpaperimage.xyz%252B.jpg&f=1&nofb=1"
-                alt="test"
-              />
+              <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
             </div>
           </div>
         </div>
