Fix projects container stuff

--- a/index.html
+++ b/index.html
@@ -74,59 +74,76 @@
         <div class="projects" id="03">
           <h1>Recent <span>Work</span></h1>
 
-          <div class="card">
-            <div class="wrapper">
-              <div class="content">
-                <h1>Portfolio</h1>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptate amet sunt, commodi sapiente distinctio odit est
-                  nihil recusandae quaerat delectus.
-                </p>
-                <div class="btn-container">
-                  <a href="#">Source</a>
-                  <a href="#">Preview</a>
-                </div>
-              </div>
-              <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
-            </div>
-          </div>
+            <div class="card">
+              <div class="wrapper">
+                <div class="content">
+                  <h1>Portfolio</h1>
+                  <p>
+                    This portfolio is built from scratch using many days and coding hours for planning and more. 
+                  </p>
 
-          <div class="card">
-            <div class="wrapper">
-              <div class="content">
-                <h1>To Do List</h1>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptate amet sunt, commodi sapiente distinctio odit est
-                  nihil recusandae quaerat delectus.
-                </p>
-                <div class="btn-container">
-                  <a href="#">Source</a>
-                  <a href="#">Preview</a>
-                </div>
-              </div>
-              <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
-            </div>
-          </div>
+                  <div class="technologies-container">
+                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-css3-alt"></i>
+                    <i class="fab fa-js"></i>
+                  </div>
 
-          <div class="card">
-            <div class="wrapper">
-              <div class="content">
-                <h1>2Auth</h1>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptate amet sunt, commodi sapiente distinctio odit est
-                  nihil recusandae quaerat delectus.
-                </p>
-                <div class="btn-container">
-                  <a href="#">Source</a>
-                  <a href="#">Preview</a>
+                  <div class="btn-container">
+                    <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
+                    <a href="#preview" target="_blank" rel="noopener noreferrer">Preview</a>
+                  </div>
                 </div>
+                <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
               </div>
-              <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
             </div>
-          </div>
+
+            <div class="card">
+              <div class="wrapper">
+                <div class="content">
+                  <h1>To Do List</h1>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium blanditiis ipsam totam autem velit quod!
+                  </p>
+
+                  <div class="technologies-container">
+                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-css3-alt"></i>
+                    <i class="fab fa-js"></i>
+                    <i class="fab fa-php"></i>
+                  </div>
+
+                  <div class="btn-container">
+                    <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
+                    <a href="#preview" target="_blank" rel="noopener noreferrer">Preview</a>
+                  </div>
+                </div>
+                <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="wrapper">
+                <div class="content">
+                  <h1>Movie App</h1>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium blanditiis ipsam totam autem velit quod!
+                  </p>
+
+                  <div class="technologies-container">
+                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-css3-alt"></i>
+                    <i class="fab fa-js"></i>
+                  </div>
+
+                  <div class="btn-container">
+                    <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
+                    <a href="#preview" target="_blank" rel="noopener noreferrer">Preview</a>
+                  </div>
+                </div>
+                <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
+              </div>
+            </div>
+
         </div>
       </section>
 
