Make about section look nicer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <h1>Mailar.</h1>
         </a>
         <ul>
+          <li><a href="#">Home</a></li>
           <li><a href="#02">About</a></li>
           <li><a href="#03">Projects</a></li>
           <li><a href="#04">Contact</a></li>
@@ -50,18 +51,24 @@
               <h2>
                 <div>Ab</div>
                 out <span> Me</span>
-                <i class="fab fa-js"></i>
-                <i class="fab fa-html5"></i>
-                <i class="fab fa-css3-alt"></i>
                 <i class="fab fa-sass"></i>
                 <i class="fab fa-node-js"></i>
                 <i class="fab fa-react"></i>
+
               </h2>
               <p>
-                Hello there, I am a Front-end developer who is currently
-                studying software development however, when I graduate, I will
-                go study full-stack development and cyber security. I am a
-                productive and professional front-end developer.
+                I am a Front-end developer who is currently
+                studying software development. 
+                
+                <br>
+                <br>
+
+                When I graduate I will go to study full-stack web development and cyber security. 
+
+                <br>
+                <br>
+
+                My passion is web development and I am a creative and curious front-end web developer.
               </p>
             </div>
           </div>
@@ -84,8 +91,8 @@
 
                   <div class="technologies-container">
                     <i class="fab fa-html5"></i>
-                    <i class="fab fa-css3-alt"></i>
                     <i class="fab fa-js"></i>
+                    <i class="fab fa-sass"></i>
                   </div>
 
                   <div class="btn-container">
@@ -105,9 +112,8 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium blanditiis ipsam totam autem velit quod!
                   </p>
 
-                  <div class="technologies-container">
+                  <div class="technologies-container">                    
                     <i class="fab fa-html5"></i>
-                    <i class="fab fa-css3-alt"></i>
                     <i class="fab fa-js"></i>
                     <i class="fab fa-php"></i>
                   </div>
@@ -124,15 +130,15 @@
             <div class="card">
               <div class="wrapper">
                 <div class="content">
-                  <h1>Movie App</h1>
+                  <h1>MovieLand</h1>
                   <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium blanditiis ipsam totam autem velit quod!
+                    MovieLand is a bit like a website where you can see information and ratings for the latest movies. The project uses the themoviedb.org API.
                   </p>
 
-                  <div class="technologies-container">
+                  <div class="technologies-container">                    
                     <i class="fab fa-html5"></i>
-                    <i class="fab fa-css3-alt"></i>
                     <i class="fab fa-js"></i>
+                    <i class="fab fa-sass"></i>
                   </div>
 
                   <div class="btn-container">
@@ -140,7 +146,7 @@
                     <a href="#preview" target="_blank" rel="noopener noreferrer">Preview</a>
                   </div>
                 </div>
-                <img src="assets/img/project-picture.jpg" alt="project-picture" width="615"/>
+                <img src="assets/img/movie-img.jpg" alt="project-picture" width="615"/>
               </div>
             </div>
 
