--- a/index.html
+++ b/index.html
@@ -14,19 +14,64 @@
   </head>
   <body>
     <div class="container">
-      <nav>
-        <a href="#" id="01">
-          <h1>Mailar</h1>
-        </a>
-        <ul>
-          <li><a href="#02">About</a></li>
-          <li><a href="#03">Projects</a></li>
-          <li><a href="#04">Contact</a></li>
-        </ul>
-        <img src="assets/svg/menu.svg" alt="menu" width="50" />
-      </nav>
+      <header>
+        <nav>
+          <a href="#" id="01">
+            <h1>Mailar</h1>
+          </a>
+          <ul>
+            <li><a href="#02">About</a></li>
+            <li><a href="#03">Projects</a></li>
+            <li><a href="#04">Contact</a></li>
+          </ul>
+          <img src="assets/svg/menu.svg" alt="menu" width="50" />
+        </nav>
 
-      <div class="main-alignment">
+        <div class="text">
+          <h1>
+            Hey! I am a <span>Front-end</span> <span>developer</span> and
+            <span>designer</span> ...
+          </h1>
+
+          <div class="btn-container">
+            <a href="cv.html" class="material-bubble" rel="noreferrer">
+              <i class="fas fa-download"></i>Resume
+            </a>
+            <a href="#03" class="material-bubble" rel="noreferrer">
+              <i class="fas fa-code-branch"></i>Projects
+            </a>
+          </div>
+        </div>
+      </header>
+
+      <article id="02">
+        <div class="text">
+          <h2>
+            <div>Ab</div>
+            out <span>Me</span>
+          </h2>
+          <p>
+            I am a Front-end web developer who is currently studying software
+            development in a vocational school.
+            <br />
+            <br />
+            My passion is to create web applications and turn them into
+            something great that looks nice and simple.
+            <br />
+
+            <i class="fab fa-js"></i>
+            <i class="fab fa-react"></i>
+            <i class="fab fa-node-js"></i>
+            <i class="fab fa-sass"></i>
+          </p>
+        </div>
+      </article>
+
+      <section></section>
+
+      <footer></footer>
+
+      <!-- <div class="main-alignment">
         <header>
           <div class="wrapper">
             <div class="main">
@@ -186,29 +231,31 @@
                 <h1>Contact <span>Form</span></h1>
                 <div class="container">
                   <form>
-
                     <label for="name">Name</label>
                     <input
                       type="text"
                       id="name"
                       name="name"
-                      placeholder="Name or email or discord ?"/>
+                      placeholder="Name or email or discord ?"
+                    />
 
                     <label for="subject">Subject</label>
                     <input
                       type="text"
                       id="subject"
                       name="subject"
-                      placeholder="Type subject ex: feedback, job, etc."/>
+                      placeholder="Type subject ex: feedback, job, etc."
+                    />
 
                     <label for="message">Message</label>
                     <textarea
                       id="message"
                       name="message"
                       placeholder="Write your message.."
-                      style="height: 200px"></textarea>
+                      style="height: 200px"
+                    ></textarea>
 
-                    <button  onclick="sendMessage()">Submit</button>
+                    <button onclick="sendMessage()">Submit</button>
                     <script src="assets/js/webhook.js"></script>
                   </form>
                 </div>
@@ -216,7 +263,7 @@
             </div>
           </div>
         </header>
-      </div>
+      </div> -->
     </div>
     <script type="module" src="assets/js/index.js"></script>
   </body>
