--- a/index.html
+++ b/index.html
@@ -1,77 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Personal Portfolio Website" />
-    <title>Mailar</title>
-    <link rel="stylesheet" href="assets/css/index.css" />
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <nav>
-          <a href="#" id="01">
-            <h1>Mailar</h1>
-          </a>
-          <ul>
-            <li><a href="#02">About</a></li>
-            <li><a href="#03">Projects</a></li>
-            <li><a href="#04">Contact</a></li>
-          </ul>
-          <img src="assets/svg/menu.svg" alt="menu" width="50" />
-        </nav>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Personal Portfolio Website" />
+        <title>Mailar</title>
+        <link rel="stylesheet" href="assets/css/index.css" />
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js""></script>
+    </head>
+    <body>
+      <canvas></canvas>
+      <script src="/assets/js/bg.js"></script>
 
-        <div class="text">
-          <h1>
-            Hey! I am a <span>Front-end</span> <span>developer</span> and
-            <span>designer</span> ...
-          </h1>
+        <div class="container">
+          <h1 class="code">STAY IN CODE</h1>
+            <header>
+                <nav>
+                    <a href="#" id="01">
+                        <h1>Mailar</h1>
+                    </a>
+                    <ul>
+                        <li><a href="#02">About</a></li>
+                        <li><a href="#03">Projects</a></li>
+                        <li><a href="#04">Contact</a></li>
+                    </ul>
+                    <img src="assets/svg/menu.svg" alt="menu" width="50" />
+                </nav>
 
-          <div class="btn-container">
-            <a href="cv.html" class="material-bubble" rel="noreferrer">
-              <i class="fas fa-download"></i>Resume
-            </a>
-            <a href="#03" class="material-bubble" rel="noreferrer">
-              <i class="fas fa-code-branch"></i>Projects
-            </a>
-          </div>
-        </div>
-      </header>
+                <div class="text">
+                    <h1>
+                        Hey! I am <span>a Front-end</span> <span>developer</span> and
+                        <span>designer</span> ...
+                    </h1>
 
-      <article id="02">
-        <div class="text">
-          <h2>
-            <div>Ab</div>
-            out <span>Me</span>
-          </h2>
-          <p>
-            I am a Front-end web developer who is currently studying software
-            development in a vocational school.
-            <br />
-            <br />
-            My passion is to create web applications and turn them into
-            something great that looks nice and simple.
-            <br />
+                    <div class="btn-container">
+                        <a href="cv.html" class="material-bubble" rel="noreferrer">
+                            <i class="fas fa-download"></i>Resume
+                        </a>
+                        <a href="#03" class="material-bubble" rel="noreferrer">
+                            <i class="fas fa-code-branch"></i>Projects
+                        </a>
+                    </div>
+                </div>
+            </header>
 
-            <i class="fab fa-js"></i>
-            <i class="fab fa-react"></i>
-            <i class="fab fa-node-js"></i>
-            <i class="fab fa-sass"></i>
-          </p>
-        </div>
-      </article>
+            <article id="02">
+                <div class="text">
+                    <h2>
+                        <div>Ab</div>
+                        out <span>Me</span>
+                    </h2>
+                    <p>
+                        I am a Front-end web developer who is currently studying software
+                        development in a vocational school.
+                        <br />
+                        <br />
+                        My passion is to create web applications and turn them into something great
+                        that looks nice and simple.
+                        <br />
 
-      <section></section>
+                        <i class="fab fa-js"></i>
+                        <i class="fab fa-react"></i>
+                        <i class="fab fa-node-js"></i>
+                        <i class="fab fa-sass"></i>
+                    </p>
+                </div>
+            </article>
 
-      <footer></footer>
+            <section></section>
 
-      <!-- <div class="main-alignment">
+            <footer></footer>
+
+            <!-- <div class="main-alignment">
         <header>
           <div class="wrapper">
             <div class="main">
@@ -264,7 +266,7 @@
           </div>
         </header>
       </div> -->
-    </div>
-    <script type="module" src="assets/js/index.js"></script>
-  </body>
+        </div>
+        <script type="module" src="assets/js/index.js"></script>
+    </body>
 </html>
