--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
       <canvas></canvas>
-      <script src="/assets/js/bg.js"></script>
+      <script src="/assets/js/mouse.js"></script>
 
         <div class="container">
           <h1 class="code">STAY IN CODE</h1>
@@ -31,7 +31,8 @@
 
                 <div class="text">
                     <h1>
-                        Hey! I am <span>a Front-end</span> <span>developer</span> and
+                        Hey!
+                        I am a <span>Front-end</span> <span>developer</span> and
                         <span>designer</span> ...
                     </h1>
 
@@ -49,8 +50,8 @@
             <article id="02">
                 <div class="text">
                     <h2>
-                        <div>Ab</div>
-                        out <span>Me</span>
+                      <div>Ab</div>
+                      out <span> Me</span>
                     </h2>
                     <p>
                         I am a Front-end web developer who is currently studying software
