--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="text" id="01">
             <h2>
               <div>Ab</div>
-              out <span> Me</span>
+              out Me
             </h2>
             <p>
               I am a Front-end web developer who is currently studying software development in a vocational school.
@@ -72,10 +72,72 @@
         <article class="work">
           <div class="text" id="03">
             <h2>My Work</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti natus dolorem blanditiis repellat quam voluptate? Nulla harum debitis
-              necessitatibus, quidem reprehenderit itaque nesciunt quasi, sapiente aliquam nam dolores unde earum.
-            </p>
+          </div>
+
+          <div class="card">
+            <div class="info">
+              <h1>Portfolio</h1>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate esse cum dolores, exercitationem quibusdam vel blanditiis
+                temporibus itaque natus.
+              </p>
+
+              <div class="technologies-container">
+                <i class="fab fa-html5"></i>
+                <i class="fab fa-js"></i>
+                <i class="fab fa-sass"></i>
+              </div>
+
+              <div class="btn-container">
+                <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="#preview" target="_blank" rel="noopener noreferrer">Preview</a>
+              </div>
+            </div>
+            <img src="assets/img/project-picture.jpg" alt="project-picture" width="615" />
+          </div>
+
+          <div class="card">
+            <div class="info">
+              <h1>To Do List</h1>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate esse cum dolores, exercitationem quibusdam vel blanditiis
+                temporibus itaque natus.
+              </p>
+
+              <div class="technologies-container">
+                <i class="fab fa-html5"></i>
+                <i class="fab fa-js"></i>
+                <i class="fab fa-sass"></i>
+              </div>
+
+              <div class="btn-container">
+                <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="#preview" target="_blank" rel="noopener noreferrer">Preview</a>
+              </div>
+            </div>
+            <img src="assets/img/project-picture.jpg" alt="project-picture" width="615" />
+          </div>
+
+          <div class="card">
+            <div class="info">
+              <h1>MovieLand</h1>
+              <p>
+                MovieLand is a bit like a website where you can see information and ratings for the latest movies. The project uses the themoviedb.org
+                API.
+              </p>
+
+              <div class="technologies-container">
+                <i class="fab fa-html5"></i>
+                <i class="fab fa-js"></i>
+                <i class="fab fa-sass"></i>
+              </div>
+
+              <div class="btn-container">
+                <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="https://movieapp-project.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
+              </div>
+            </div>
+            <img src="assets/img/movie-img.jpg" alt="project-picture" width="615" />
           </div>
         </article>
 
@@ -134,42 +196,7 @@
               <div class="margin">
                 <h1>Recent <span>Work</span></h1>
 
-                <div class="card">
-                  <div class="info">
-                    <h1>Portfolio</h1>
-                    <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Error cupiditate esse cum dolores, exercitationem
-                      quibusdam vel blanditiis temporibus itaque natus.
-                    </p>
-
-                    <div class="technologies-container">
-                      <i class="fab fa-html5"></i>
-                      <i class="fab fa-js"></i>
-                      <i class="fab fa-sass"></i>
-                    </div>
-
-                    <div class="btn-container">
-                      <a
-                        href="#github"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Code</a
-                      >
-                      <a
-                        href="#preview"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Preview</a
-                      >
-                    </div>
-                  </div>
-                  <img
-                    src="assets/img/project-picture.jpg"
-                    alt="project-picture"
-                    width="615"
-                  />
-                </div>
+          
 
                 <div class="card">
                   <div class="info">
